# codift-fyp

./: .clang-format  .gitignore
ActualCODIFT/: Makefile  diagram.json  terminal.md
ActualCODIFT/codift/: runtime.c  runtime.h
ActualCODIFT/codift/passes/: checkPass.cpp  injectPass.cpp
ActualCODIFT/src/: door_lock.c
CODIFT/: .clang-format  .gitignore  Makefile  attack_protected  automatic_test_normalProtection  automatic_test_protected  direct_test  manual_test_protected  terminal.md  terminal.txt  test_runtime
CODIFT/codift/: runtime.c
CODIFT/codift/passes/: CMakeLists.txt  checkPass.cpp  injectPass.cpp
CODIFT/llvmIR/: automaticDetectingTest.ll  automaticDetectingTestNormalProtection.ll  automaticDetectingTestProtected.ll  automaticDetectingTest_protected.ll  automaticDetectingTest_selectiveCheck.ll  automaticDetecting_test.ll  automaticDetecting_testProtected.ll  automaticDetecting_test_injectAndCheck.ll  automaticDetecting_test_selectiveInjectAndCheck.ll  automaticDetecting_test_selectiveInjectAndSelectiveCheck.ll  manualDetecting_test.ll  manualDetecting_test_selectiveCheckAndInject.ll  selective_test.ll  selective_test_checkAndInject.ll  selective_test_selectiveCheckAndInject.ll  simple_test.ll  simple_test_checkAndInject.ll  simple_test_injectOnly.ll  simple_test_protected.ll  test.ll
CODIFT/src/: CMakeLists.txt
CODIFT/src/code/: automaticDetecting_test.c  manualDetecting_test.c  selective_test.c  simple_test.c  test.cpp
CODIFT/src/passes/: checkPass.cpp  codiftCheckPass.cpp  codiftInjectPass.cpp  codiftPass.cpp  countFunc.cpp  injectPass.cpp  selectiveCodift_checkPass.cpp  selectiveCodift_injectPass.cpp  selective_codiftCheckPass.cpp  selective_codiftInjectPass.cpp
CODIFT/src/runtime/: codift_runtime.c  codift_runtime.h  runtime.c  runtime.h
CODIFT/tests/: test_runtime.c
CODIFT_PROTO/: terminal.md
CODIFT_PROTO/src/passes/: checkPass.cpp
CODIFT_PROTO/src/runtime/: runtime.h
